# scientific-graph-agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
notebooks/: demo.ipynb  demo_advanced.ipynb  demo_basic.ipynb  demo_multi_tools.ipynb
src/agent_graph/: __init__.py  graph.py  nodes.py  state.py  tools.py
